crates/plotnik-lib/tests/02-parser/recovery_unexpected/capture_at_start_of_alternation.txt
[@x (a)]
==== diagnostics ====
error: expected a branch, or `]` to close
 --> query.ptk:1:2
  |
1 | [@x (a)]
  |  ^^
